--- a/HangFire/Example/Hangfire.Example/appsettings.json
+++ b/HangFire/Example/Hangfire.Example/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=DESKTOP-N2Q4B92;Database=HangfireExample;Trusted_Connection=True;TrustServerCertificate=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +8,4 @@
   },
   "AllowedHosts": "*"
 }
+
